// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Select/SelectChoice component renders fine 1`] = `
<li
  className="test-choice-selection-choice test-choice-selection-choice__last"
>
  <div
    className="an-tag an-tag__default an-tag__size-m test-choice-selection-choice__tag an-tag__closable"
    closable={true}
    onClose={[Function]}
    prefixCls="an-tag"
    size="m"
    type="default"
  >
    <span
      className="test-choice-selection-choice__content"
    >
      mutli-select choice1
    </span>
    <i
      className="icon icon-close"
      onMouseDown={[Function]}
    />
  </div>
</li>
`;

exports[`components/Select/SelectChoice component renders fine with customize choice renderer 1`] = `
<li
  className="undefined-selection-choice"
>
  <div
    className="an-tag an-tag__default an-tag__size-m undefined-selection-choice__tag an-tag__closable"
    closable={true}
    onClose={[Function]}
    prefixCls="an-tag"
    size="m"
    type="default"
  >
    <div
      className="customize-choice"
    >
      mutli-select choice2
       
      msc2
    </div>
    <i
      className="icon icon-close"
      onMouseDown={[Function]}
    />
  </div>
</li>
`;
